<resources>
    <string name="app_name">Despesas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="titulo_projeto">GESTÃO DE DESPESAS DO GRUPO</string>
    <string name="descricao_projeto">Aplicação android que assegura a gestão de despesas efetuadas por um grupo num determinado período de tempo, recolhendo informação em modo local.</string>
    <string name="title_activity_activity_despesa_novo">Despesa</string>
    <string name="title_activity_activity_grupo_novo">Grupo</string>

    <string name="str_telefone">Telefone</string>
    <string name="str_sair">Exit</string>
    <string name="str_email">Email</string>
    <string name="str_nome_da_empresa">CrivoSoft</string>
    <string name="str_nome_da_empresa_lda">CrivoSoft Lda</string>
    <string name="str_enviar_email">Enviar email...</string>
    <string name="ja_existe">já existe</string>
    <string name="title_activity_activity_despesa_detail">Detalhe da despesa</string>
    <string name="title_activity_activity_grupo_detail">Detalhe do grupo</string>
    <string name="title_activity_activity_pessoa_detail">Detalhe da pessoa</string>
    <string name="title_activity_activity_simular_detail">Detalhe da conta</string>
    <string name="edit">Alterar</string>
    <string name="app_name_consultar_despesa">Consultar despesas</string>
    <string name="app_name_alterar">Alterar</string>
    <string name="app_name_simular_contas">Simular contas</string>
    <string name="app_name_fechar_contas">Fechar contas</string>
    <string name="app_fragment_title_despesas">Despesas</string>
    <string name="app_fragment_title_grupos">Grupos</string>
    <string name="app_fragment_title_pessoas">Pessoas</string>
    <string name="app_name_consultar_despesa_todas">Todas</string>
    <string name="app_name_consultar_despesa_por_grupo">Por grupo</string>
    <string name="app_name_consultar_despesa_por_pessoas">Por pessoa</string>
    <string name="no_connection">NÃO TEM CONEXÃO</string>
    <string name="title_activity_activity_login">Entrar</string>
    <string name="title_activity_activity_sign_up">Registar</string>

    <string name="Username">Nome Utilizador</string>
    <string name="Password">Senha</string>
    <string name="Password_repeat">Repete a senha</string>
    <string name="LoginBtn">Entrar</string>
    <string name="SignupBtn">Registar</string>
    <string name="LogoutBtn">Sair</string>
    <string name="fechar_mesmo_as_contas">Quer mesmo fechar a conta. \nÉ obrigatório ter uma conexão (internet) </string>
    <string name="fechar_conta">Fechar conta</string>
    <string name="despesa_inserido_com_sucesso">Despesa inserido com sucesso</string>
    <string name="despesa_atualizado_com_sucess">Despesa atualizado com sucesso</string>
    <string name="dados_incompleto">Dados incompleto!</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="utilizador_registado_com_sucesso">Utilizador registado com sucesso</string>
    <string name="utilizador_ja_existe">Utilizador já existe</string>
    <string name="a_registar">A registar...</string>
    <string name="por_favor_inserir_nome_utilizador">Por favor inserir o nome do utilizador</string>
    <string name="por_favor_inserir_email">Por favor inserir o email</string>
    <string name="por_favor_inserir_email_valido">Por favor inserir um email válido</string>
    <string name="erro_ao_login">Erro ao login...</string>
    <string name="por_favor_inserir_uma_senha">Por favor inserir uma senha</string>
    <string name="erro_ao_fazer_login">Erro ao fazer login...</string>
    <string name="as_senhas_nao_sao_iguais">As senhas não são iguais</string>
    <string name="utilizador_ou_senha_errado">O utilizador ou senha não errado!</string>
    <string name="login_sucesso">Entrou com sucesso</string>
    <string name="loging_in">A entrar...</string>
    <string name="delete">Eliminar</string>
    <string name="foto_obrigatorio">É obrigatório inserir uma imagem!</string>
    <string name="title_activity_activity_enviar_dados">ActivityEnviarDados</string>
    <string name="nao_pode_interomper_o_processo">Não pode interromper o processo!</string>
    <string name="dados_enviado_com_sucesso">Os dados enviado com sucesso!</string>
    <string name="ocorreu_erro">Ocorreu um erro!</string>
    <string name="loading">...</string>
    <string name="criar_novo_grupo">Criar novo grupo</string>
    <string name="selecao">Seleção</string>
    <string name="selecao_pessoa_mensagem">Selecionar uma pessoa para adicionar ao grupo.\n</string>
    <string name="existente">Existente</string>
    <string name="nova">Nova</string>
    <string name="select_pessoa">Selecionar pessoa</string>
    <string name="ja_foi_adicionado">Ja foi selecionado</string>
    <string name="select_moeda">Selecionar moeda</string>
    <string name="nao_pode_remover_pessoa_que_pagou_despesa">Não pode remover a pessoa que pagou a despesa do grupo</string>
    <string name="o_nome">"O nome "</string>
    <string name="data_muita_antiga">A data é muita antiga</string>
    <string name="ocorreu_erro_inesperado">Ocorreu um erro inesperado...</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="recuperar">Recuperar</string>
    <string name="pessoa">Pessoa</string>
    <string name="alterar">ALTERAR</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="recuperar_senha_mensagem_de_sucesso">Foi enviado um email com a instrução para recuperar senha.</string>
    <string name="moeda_despesa_e_do_grupo_sao_diferentes">Moeda na recolha da despesa é diferente da moeda que o grupo possui, é necessário ter conexão a internet para fazer a conversão da moeda</string>
    <string name="home">Home</string>
    <string name="tem_que_pagar">"Tem que receber "</string>
    <string name="tem_que_receber">"Tem que pagar "</string>
    <string name="envio_de_dados">Envio de dados</string>
    <string name="menu_operacoes">Operações</string>
    <string name="menu_recolha_despesa">Recolha de despesa</string>
    <string name="menu_consultar_despesa">Consultar despesas</string>
    <string name="acerto_de_contas">Acerto de contas</string>
    <string name="tipo">Tipo</string>
    <string name="descricao">Descrição</string>
    <string name="importancia">Importância</string>
    <string name="moeda">Moeda</string>
    <string name="select_grupo">Selecionar grupo</string>
    <string name="recolher_nova_despesa">Recolher nova despesa</string>
    <string name="alterar_despesa">Alterar despesa</string>
    <string name="despesa">Despesa</string>
    <string name="seleciona_primeiro_o_grupo">Seleciona 1º o grupo!</string>
    <string name="importancia_erro">Importância erro</string>
    <string name="grupo">Grupo</string>
    <string name="pessoa_que_pagou">Pessoa que paid</string>
    <string name="nome">Nome</string>
    <string name="pessoas_do_grupo">Pessoas do grupo</string>
    <string name="moeda_usada">Moeda usada</string>
    <string name="adicionar_pessoas">Adicionar pessoas</string>
    <string name="telefone">Telefone</string>
    <string name="username">Nome utilizador</string>
    <string name="password">Senha</string>
    <string name="pertenceu_ao_grupo">Pertenceu ao grupo</string>
    <string name="valor_total">Valor total</string>
    <string name="o_que_devia_pagar">O que devia pagar</string>
    <string name="o_que_pagou">O que pagou</string>
    <string name="pertenceu_a_despesa">Pertenceu à despesa</string>
    <string name="conta">Conta</string>
    <string name="conta_da_despesa_do_grupo">Conta da despesa do grupo</string>
    <string name="enviar_email">Enviar email</string>
    <string name="cliente_nao_instalado">Cliente de email nao está instalado</string>
    <string name="email_invalido">Email invalidol</string>
    <string name="despesa_do_grupo">Despesas do grupo</string>
</resources>
