<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg"
    tools:context="com.projeto.helder.projetoaplicado.activities.ActivitySignUp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/avatar"
            app:border_color="#FF000000" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email"
            android:inputType="textEmailAddress" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_repeat"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/id_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/ripple_effect"
            style="@style/MenuButtonsStyle"
            android:text="@string/SignupBtn" />
    </LinearLayout>

</RelativeLayout>
