<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg"
    tools:context="com.projeto.helder.projetoaplicado.activities.ActivityLogin">

    <!--<include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"></include>-->

    <LinearLayout
        android:id="@+id/id_activity_login_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_activity_login_avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/avatar"
            app:border_color="#FF000000" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            app:floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:floatingLabel="normal" />

        <RelativeLayout
            android:id="@+id/id_activity_login_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_btn_login"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/ripple_effect"
                android:text="@string/LoginBtn" />

            <Button
                android:id="@+id/id_btn_signup"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ripple_effect"
                android:text="@string/SignupBtn" />
        </RelativeLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/ripple_effect"
            android:elevation="4dp"
            android:onClick="forgetPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/recuperar_senha"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</RelativeLayout>
