<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:layout_marginTop="10dp">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/id_et_nome_nova_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/id_et_email_nova_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        app:floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/id_et_numero_contacto_nova_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        app:floatingLabel="normal" />

    <ImageView
        android:id="@+id/id_iv_imagem_nova_contacto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:src="@drawable/camera" />
</LinearLayout>
