<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toolbar"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/id_iv_despesa_nova_imagem"
                android:layout_width="@dimen/dimen_foto_detail_despesa"
                android:layout_height="@dimen/dimen_foto_detail_despesa"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/camera" />

            <LinearLayout
                android:id="@+id/id_ll_despesa_nova_nome_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_iv_despesa_nova_imagem"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/id_et_despesa_nova_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipo"
                    android:inputType="textPersonName"
                    app:floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/id_et_despesa_nova_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    app:floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/id_et_despesa_nova_importancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/importancia"
                    android:inputType="numberDecimal"
                    app:floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/id_et_despesa_nova_moeda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="@string/moeda"
                    android:inputType="date"
                    app:floatingLabel="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/id_et_despesa_nova_grupo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.95"
                        android:focusable="false"
                        android:hint="@string/select_grupo"
                        android:popupBackground="@drawable/activity_main_bg"
                        app:floatingLabel="normal" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/id_et_despesa_nova_pessoa_que_pagou"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.95"
                        android:focusable="false"
                        android:hint="@string/select_pessoa"
                        android:popupBackground="@drawable/activity_main_bg"
                        app:floatingLabel="normal" />

                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/id_et_despesa_nova_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="dd/mm/yyyy"
                    android:inputType="date"
                    app:floatingLabel="normal" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/id_fab_despesa_nova_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="4dp"
                    android:src="@mipmap/ic_save" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
