<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg"

    tools:context="com.projeto.helder.projetoaplicado.activities.ActivityGrupoDetail">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_toolbar"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/nome"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/id_tv_grupo_detail_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/moeda"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/id_tv_grupo_detail_moeda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/id_tv_grupo_detail_pessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pessoas_do_grupo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_lista_grupo_detail_pessoas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>
