<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg"
    tools:context="com.projeto.helder.projetoaplicado.activities.ActivityPessoaDetail">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_imageView_pessoa_detail_foto"
            android:layout_width="@dimen/dimen_foto_detail_despesa"
            android:layout_height="@dimen/dimen_foto_detail_despesa"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/no_pessoa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/nome"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/id_tv_pessoa_detail_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/str_telefone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/id_tv_pessoa_detail_telefone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/str_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/id_tv_pessoa_detail_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pertenceu_ao_grupo"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/id_tv_pessoa_detail_grupos"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_recycler_pessoa_detail_grupos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/linearLayout" />

</RelativeLayout>
