<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_relativeLayout_activity_grupo_novo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg"
    >

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:id="@+id/id_ll_grupo_novo_nome_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toolbar"
        android:layout_margin="2dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_grupo_novo_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/id_et_grupo_novo_moeda_usado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/moeda_usada"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:floatingLabel="normal" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_rl_despesa_nova_lista_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_ll_grupo_novo_nome_descricao"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar_pessoas"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/id_btn_despesa_add_grupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="adicionarPessoas"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@mipmap/ic_plus" />
            </RelativeLayout>

            <ListView
                android:id="@+id/id_ll_grupo_novo_lista_pessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/id_btn_grupo_novo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_save" />


    </RelativeLayout>


</RelativeLayout>
